test/chainsaw/validate/cel/issue-14556/resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temp-ingress
spec:
  ingressClassName: prod-ingressclass
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
